docs: refactoring
